@@ -50,9 +50,4 @@ DragImageRef Frame::dragImageForSelection()
     return 0;
 }
 
-void Frame::dashboardRegionsChanged()
-{
-    notImplemented();
-}
-
 }
